# comfyui-custom-nodes

./: ._comfyui_morpheus_model_management  README.md
.disabled/comfyui-elevenlabs-integrtion@nightly/: LICENSE  README.md  __init__.py  pyproject.toml
.disabled/comfyui-elevenlabs-integrtion@nightly/.github/: release-drafter.yml
11labs@1_0_0/: .gitignore  README.md  __init__.py  pyproject.toml
ComfyUI-AudioDuration/: __init__.py
ComfyUI-FalLipsync/: __init__.py
ComfyUI-Jjk-Nodes/: __init__.py  jjk_util.py
ComfyUI-KieSeedance2/: nodes.py
ComfyUI-NanoBanano/: LICENSE  README.md  __init__.py  config.json  nano_banano.py  requirements.txt
ComfyUI-QualityOfLifeSuit_Omar92/: README.md
ComfyUI-concat_images_to_api_gemini/: __init__.py  concat2_raw.py  grid_collage_ar.py
KlingOmni_byGeorge/: node.py
NanoBanana_Batch_byGeorge/: node.py
NanoBanana_byGeorge/: node.py
SV-AION-master/: __init__.py  aion_api.py  aion_server.py  flux_local_template.txt  flux_system_prompt.txt  fusion_prompt.txt  nodes.py  system_prompt.txt
Seedance2_byGeorge/: node.py  requirements.txt
Seedream45_byGeorge/: node.py
Seedream5_byGeorge/: node.py
comfy-rvc/: .tracking
comfyui-deploy/: .tracking
comfyui-elevenlabs-integration-master/: .gitignore  __init__.py  elevenlabs_text_to_speech.py  elevenlabs_voice_clone.py  requirements.txt
comfyui-elevenlabs-integrtion@0_2_0/: .tracking
comfyui-elevenlabs-integrtion@nightly/: elevenlabs_text_to_effect.py
comfyui-fabric-lipsync/: __init__.py  fabric_lipsync.py  fabric_text_to_video.py  requirements.txt
comfyui-fal-connector/: .tracking
comfyui-github-workflows/: __init__.py  github_workflows.js
comfyui-heygen-av4/: README.md  __init__.py  heygen_api.py  heygen_av4_node.py  media_utils.py  pyproject.toml
comfyui-if_gemini/: .gitignore  .tracking  COMPATIBILITY_NOTICE.md  OPENROUTER_README.md  README.md  __init__.py  api_routes.py  audio_utils.py  dotenv.example  env_utils.py  example.env  gemini_node.py  image_utils.py  openrouter_client.py  pyproject.toml  requirements.txt  response_utils.py  task_prompt_manager.py  test_openrouter.py  utils.py
comfyui-if_gemini/example_workflows/: IF_Gemini2.json
comfyui-if_gemini/presets/: banana-tasks.json
comfyui-if_gemini/web/: gemini_extension.js  index.html
comfyui-if_gemini/web/js/: gemini_node.js
comfyui-impact-pack/: .gitignore  .tracking  README.md  pyproject.toml  requirements.txt
comfyui-impact-pack/docs/wildcards/: README.md  SUMMARY.md  WILDCARD_SYSTEM_DESIGN.md  WILDCARD_SYSTEM_PRD.md  WILDCARD_TESTING_GUIDE.md
comfyui-impact-pack/js/: impact-pack.js
comfyui-impact-pack/modules/impact/: animatediff_nodes.py  config.py  core.py  detectors.py  impact_pack.py  impact_sampling.py  impact_server.py  segs_nodes.py  segs_upscaler.py  special_samplers.py  util_nodes.py  wildcards.py
comfyui-impact-pack/tests/: README.md  RUN_ALL_TESTS.md  restart_test_server.sh  test_config_quotes.sh  test_deep_nesting.sh  test_dynamic_prompts_full.sh  test_edge_cases.sh  test_encoding.sh  test_error_handling.sh  test_ondemand_loading.sh
comfyui-impact-pack/tests/wildcards/: README.md  find_deep_transitive.py  find_transitive_wildcards.sh  run_quick_test.sh  test_lazy_load_api.sh  test_lazy_load_verification.py  test_progressive_loading.py  test_progressive_ondemand.sh  test_sequential_loading.sh  test_versatile_prompts.sh  test_wildcard_consistency.sh  test_wildcard_final.py  test_wildcard_lazy_loading.py  verify_ondemand_mode.sh
comfyui-impact-pack/tests/wildcards/samples/: README.md
comfyui-ltx-node-main/: README.md  __init__.py  pyproject.toml
comfyui-notebooklm/: __init__.py  requirements.txt
comfyui-sync-lipsync-main/: .gitignore  README.md  requirements.txt  sync-lipsync-comfyui.json  sync_node.py
comfyui-utils-nodes/: .tracking
comfyui-vid2vid/: .tracking  README.md  __init__.py  pyproject.toml  vid2vid.py
comfyui_elevenlabs_tts/: __init__.py  elevenlabs_nodes.py  float_to_int.py  requirements.txt
comfyui_morpheus/: .gitignore  LICENSE  README.md  gemini_api.py  nodes.py  pyproject.toml
comfyui_morpheus/examples/: basic_workflow.json
comfyui_morpheus_NanoBanana_Mask/: .replit  __init__.py  replit.md  requirements.txt  validate_package.py
comfyui_morpheus_batch/: __init__.py  morpheus_batch_images.py
comfyui_morpheus_gemini/: __init__.py  morpheus_gemini.py
glm_prompt/: .env  .tracking  README.md  __init__.py  app.py  config.json  pyproject.toml  requirements.txt
glm_prompt/node/: aliyun_oss_node.py  glm.py  load_image.py
glm_prompt/prompt/: image_prompts.txt  text_prompts.txt
promptmodels/: .tracking  LICENSE  README.md  RELEASE_NOTE.md  __init__.py  pyproject.toml
promptmodels/.github/workflows/: publish.yaml  publish.yml
promptmodels/ComfyUI_GoogleAI/: LICENSE  README.md  __init__.py  google_core.py  google_diagnostic_node.py  google_image_node.py  google_text_node.py  google_video_node.py  install.py  requirements.txt
promptmodels/ComfyUI_GoogleAI/web/: google_ai_ui.js
promptmodels/ComfyUI_GrokAI/: README.md  __init__.py  grok_core.py  grok_diagnostic_node.py  grok_image_node.py  grok_prompt_node.py  grok_text_node.py  grok_video_node.py  requirements.txt
promptmodels/ComfyUI_GrokAI/js/: grok_ui.js
promptmodels/DivisorDePrompts/: LICENSE  README.md  __init__.py  test_divisor.py
promptmodels/GETSETNODE_PRO/: README.md  __init__.py  qwen_cache.py  requirements.txt  setget_nodes.py  unet_loader_gguf.py
promptmodels/comfyui_selectores_pro/: README.md  __init__.py  imagen_latente.py  prompt_pro.py  selector_imagenes.py  selector_prompts.py
promptmodels/get_last_frame/: __init__.py  get_last_frame.py
promptmodels/text_prompt_blocker/: README.md  __init__.py  text_prompt_blocker.py
rgthree-comfy/: .tracking  README.md  __init__.py  package-lock.json  package.json  rgthree_config.json.default
sergio-grid-split-main/: README.md  __init__.py  grid_analyze.py  grid_split_auto.py  grid_split_by_cell.py  (+3 more)
was-ns/: ComfyUI_+_WAS_Node_Suite_and_ComfyUI_Manager.ipynb  README.md  WAS_Node_Suite.py  pyproject.toml  requirements.txt
(+56 files in other folders)
