[project]
name = "comfyui-morpheus"
version = "2.1.0"
description = "ComfyUI custom nodes for Google Gemini image generation with native aspect ratio and resolution support"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.2.0",
    "torch>=2.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ComfyUI-Morpheus"
Repository = "https://github.com/yourusername/ComfyUI-Morpheus"
Issues = "https://github.com/yourusername/ComfyUI-Morpheus/issues"

[tool.comfy]
PublisherId = "yourusername"
DisplayName = "Morpheus - Gemini Image Generation"
Icon = ""

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
