[project]
name = "glm_prompt"
description = ""
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["zhipuai", "Pillow", "numpy", "oss2==2.15.0", "aliyun-python-sdk-core==2.15.0", "six>=1.16.0"]

[project.urls]
Repository = "https://github.com/jiandanplus/Comfyui-GLM_Prompt"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/jiandanplus/Comfyui-GLM_Prompt/wiki"
"Bug Tracker" = "https://github.com/jiandanplus/Comfyui-GLM_Prompt/issues"

[tool]
[tool.comfy]
PublisherId = "jiandamnit"
DisplayName = "Comfyui-GLM_Prompt"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

