[project]
name = "was-ns"
description = "A massive node pack consisting of over 200 nodes, including image processing, masking, text handling, and arithmetic operations.\nNOTE: A replacement node pack provided for existing users following the retirement of the original author of the widely used WAS Node Suite."
version = "3.0.1"
license = { file = "LICENSE" }
dependencies = ["cmake", "fairscale>=0.4.4", "git+https://github.com/ltdrdata/img2texture.git", "git+https://github.com/ltdrdata/cstr", "gitpython", "imageio", "joblib", "matplotlib", "numba>=0.62", "numpy", "opencv-python-headless[ffmpeg]<=4.7.0.72", "pilgram", "git+https://github.com/ltdrdata/ffmpy.git", "rembg", "scikit-image>=0.20.0", "scikit-learn", "scipy", "timm>=0.4.12", "tqdm", "transformers"]

[project.urls]
Repository = "https://github.com/ltdrdata/was-node-suite-comfyui"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "drltdata"
DisplayName = "WAS Node Suite (Revised)"
Icon = ""
